--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: 'Studying and Programming'
 baseurl:     '' # The subpath of your site, e.g. /blog
 url:         'https://github.com/jiyounyou' # The base hostname & protocol for your site
 twitter:     ''
-github:      ''
+github:      'https://github.com/jiyounyou'
 instagram:   ''
 facebook:    ''
 
