--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ baseurl:     '' # The subpath of your site, e.g. /blog
 url:         'https://github.com/jiyounyou' # The base hostname & protocol for your site
 twitter:     ''
 github:      'https://github.com/jiyounyou'
-instagram:   ''
-facebook:    ''
+#instagram:   ''
+#facebook:    ''
 
 markdown:  kramdown
 permalink: pretty
