--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:       Jiyoun You
+title:       Hello, Jiyoun!
 email:       'younny418@gmail.com'
 description: 'Studying and Programming'
 baseurl:     '' # The subpath of your site, e.g. /blog
 url:         'https://github.com/jiyounyou' # The base hostname & protocol for your site
 twitter:     ''
 github:      'https://github.com/jiyounyou'
-#instagram:   ''
-#facebook:    ''
+instagram:   ''
+facebook:    ''
 
 markdown:  kramdown
 permalink: pretty
@@ -29,6 +29,7 @@ plugins:
 
 include:
   - _pages
+  - _tags
 
 exclude:
   - vendor
