--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "유지연"
   avatar           : "/assets/images/profile/profilephoto.jpg" # 프로필 이미지
-  bio              : "주니어 웹 개발자입니다. <br> 공부하면서 기록한 내용들을 포스팅합니다."
+  bio              : "주니어 웹 개발자입니다. <br>꾸준히 공부하고 기록합니다."
   location         : "Seoul, Korea"
   #email            : "younny418@gmail.com"
   links:
