--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title_separator          : "&#124;" # 타이틀 사이 구분자 <title>Welcome 
 subtitle                 : "Since Jul 2020" # 타이틀 아래에 나올 작은 글씨 
 name                     : "Jiyoun" # 맨 하단 이름 찍히는 영역
 description              : "공부하고 기록합니다." # Meta 태그에 들어가는 영역 
-url                      : "https://github.com/jiyounyou/" # GitBlog 호스트 주소
+url                      : "https://jiyounyou.github.io/" # GitBlog 호스트 주소
 baseurl                  : # subPath https://jiyounyou.github.io/blog라고 하고 싶을 시 "/blog" 라고 적는다.
 repository               : "jiyounyou/jiyounyou.github.io" # GitHub username/repo-name  
 teaser                   : # "/assets/images/senior-couple-4723737_640.jpg" # 홈페이지 기본 티져 이미지
