--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ title                    : "Jiyoun You" # Meta 태그에 들어가는 영역 , m
 title_separator          : "&#124;" # 타이틀 사이 구분자 <title>Welcome to Jekyll | Minimal Mistakes</title> 해당 형식으로 들어갑니다.
 subtitle                 : "Since Jul 2020" # 타이틀 아래에 나올 작은 글씨 
 name                     : "Jiyoun" # 맨 하단 이름 찍히는 영역
-description              : "공부하고 기록합니다." # Meta 태그에 들어가는 영역 
+description              : "Keep Coding!" # Meta 태그에 들어가는 영역 
 url                      : "https://jiyounyou.github.io/" # GitBlog 호스트 주소
 baseurl                  : # subPath https://jiyounyou.github.io/blog라고 하고 싶을 시 "/blog" 라고 적는다.
 repository               : "jiyounyou/jiyounyou.github.io" # GitHub username/repo-name  
 teaser                   : # "/assets/images/senior-couple-4723737_640.jpg" # 홈페이지 기본 티져 이미지
 logo                     : # 타이틀 옆에 작게 들어갈 이미지.
-masthead_title           : "공부하고 기록하는 공간" # 홈페이지 최 상탄에 들어갈 타이틀
+masthead_title           : "Keep Coding with me!" # 홈페이지 최 상탄에 들어갈 타이틀
 breadcrumbs              : true # 브래드크럼 사용 여부 true, false (default) , _data/ui-text.yml에 다국어 지원 가능합니다.
 words_per_minute         : 200 # 해당 포스트 읽는데 걸리는 시간을 계산하기 위해 대락 분당 읽는 수가 몇글자가 될지 적는 공간.
 
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "유지연"
   avatar           : "/assets/images/profile/profilephoto.jpg" # 프로필 이미지
-  bio              : "주니어 웹 개발자입니다. <br>꾸준히 공부하고 기록합니다."
+  bio              : "I'm a junior web developer. <br> Let's code with me!"
   location         : "Seoul, Korea"
   #email            : "younny418@gmail.com"
   links:
