--- a/_config.yml
+++ b/_config.yml
@@ -238,6 +238,10 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+project_archive:
+  type: liquid
+  path: /projects/
+
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
