--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,15 @@ node_modules
 npm-debug.log*
 vendor/bundle
 .project
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### VS Code ###
+.vscode/
