navi menu changed

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,10 @@ main:
 #    url: /tags/
 #  - title: "About"
 #    url: /about/
-  - title: "Portfolio""
+  - title: "Portfolio"
     url: /projects/
+  - title: "Resume"
+    url: /resume/
 
 # - title: "Quick-Start Guide"
 #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
