--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
   - title: "Portfolio"
     url: /projects/
   - title: "Resume"
-    url: /resume/
+    url: /about/
 
 # - title: "Quick-Start Guide"
 #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
