--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ minimal_mistakes_skin    : "air" # 태마 색 설정 "air", "aqua", "contrast", 
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "jiyoun yoo" # Meta 태그에 들어가는 영역 , masthead_title등이 없으면 기본값으로 나온다.
+title                    : "Jiyoun Yoo" # Meta 태그에 들어가는 영역 , masthead_title등이 없으면 기본값으로 나온다.
 title_separator          : "&#124;" # 타이틀 사이 구분자 <title>Welcome to Jekyll | Minimal Mistakes</title> 해당 형식으로 들어갑니다.
 subtitle                 : "Since Jul 2020" # 타이틀 아래에 나올 작은 글씨 
 name                     : "Jiyoun" # 맨 하단 이름 찍히는 영역
