--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,15 @@
 # main links
 main:
-  - title: "Archive"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-#  - title: "Tags"
-#    url: /tags/
-#  - title: "About"
-#    url: /about/
-  - title: "Portfolio"
-    url: /projects/
   - title: "Resume"
     url: /about/
+  - title: "Portfolio"
+    url: /portfolio/
+  - title: "Categories"
+    url: /categories/
+#  - title: "Archive"
+#    url: /posts/
+#  - title: "Tags"
+#    url: /tags/
 
 # - title: "Quick-Start Guide"
 #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
