--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /about/
   - title: "Portfolio"
     url: /portfolio/
-  - title: "Categories"
+  - title: "Posts"
     url: /categories/
 #  - title: "Archive"
 #    url: /posts/
